--- a/EShop/Pages/Admin/User.cshtml
+++ b/EShop/Pages/Admin/User.cshtml
@@ -59,7 +59,7 @@
                 @if (item.IsAdmin)
                 {
                     <td>
-                        <form method="post">
+                        <form method="post" asp-page-handler="RemoveAdmin">
                             <input type="hidden" asp-for="@item.Id" />
                             <a class="btn btn-secondary" data-id="@item.Id">مدیر نباشد</a>
                         </form>
@@ -75,9 +75,16 @@
                     </td>
                 }
                 <td>
-                    <a class="btn btn-warning" asp-page="Edit" asp-route-id="@item.Id">ویرایش</a>
-                    <a class="btn btn-danger" data-id="@item.Id">حذف</a>
+                    <div class="d-flex align-items-center">
+                        <form method="post" asp-page-handler="Delete" class="mr-2">
+                            <a class="btn btn-danger" data-id="@item.Id">حذف</a>
+                        </form>
+                        <form class="me-2">
+                            <a class="btn btn-warning" asp-page="EditUser" asp-route-id="@item.Id">ویرایش</a>
+                        </form>
+                    </div>
                 </td>
+
             </tr>
         }
     </tbody>
@@ -87,6 +94,8 @@
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         const isAdminButtons = document.querySelectorAll('.btn.btn-success');
+        const removeAdminButtons = document.querySelectorAll('.btn.btn-secondary');
+        const removeUserButtons = document.querySelectorAll('.btn.btn-danger');
 
         isAdminButtons.forEach(button => {
             button.addEventListener('click', function (event) {
@@ -108,6 +117,102 @@
                 }).then((result) => {
                     if (result.isConfirmed) {
                         fetch(`/Admin/User?handler=MakeAdmin`, {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json',
+                                'RequestVerificationToken': token
+                            },
+                            body: JSON.stringify({ id: userId })
+                        }).then(response => {
+                            if (response.ok) {
+                                Swal.fire(
+                                    'کاربر مدیر شد!',
+                                    'عملیات با موفقیت انجام شد.',
+                                    'success'
+                                ).then(() => {
+                                    location.reload();
+                                });
+                            } else {
+                                Swal.fire(
+                                    'خطا!',
+                                    'خطایی در انجام عملیات رخ داد.',
+                                    'error'
+                                );
+                            }
+                        });
+                    }
+                });
+            });
+        });
+
+        removeAdminButtons.forEach(button => {
+            button.addEventListener('click', function (event) {
+                event.preventDefault();
+
+                const userId = this.getAttribute('data-id');
+                const form = this.closest('form');
+                const token = form.querySelector('input[name="__RequestVerificationToken"]').value;
+
+                Swal.fire({
+                    title: 'آیا مطمئن هستید؟',
+                    text: "آیا شما قصد دارید این کاربر را مدیر کنید؟",
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'بله، مطمئنم!',
+                    cancelButtonText: 'خیر'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        fetch(`/Admin/User?handler=RemoveAdmin`, {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json',
+                                'RequestVerificationToken': token
+                            },
+                            body: JSON.stringify({ id: userId })
+                        }).then(response => {
+                            if (response.ok) {
+                                Swal.fire(
+                                    'کاربر مدیر شد!',
+                                    'عملیات با موفقیت انجام شد.',
+                                    'success'
+                                ).then(() => {
+                                    location.reload();
+                                });
+                            } else {
+                                Swal.fire(
+                                    'خطا!',
+                                    'خطایی در انجام عملیات رخ داد.',
+                                    'error'
+                                );
+                            }
+                        });
+                    }
+                });
+            });
+        });
+
+        removeUserButtons.forEach(button => {
+            button.addEventListener('click', function (event) {
+                event.preventDefault();
+
+                const userId = this.getAttribute('data-id');
+                const form = this.closest('form');
+                const token = form.querySelector('input[name="__RequestVerificationToken"]').value;
+
+                Swal.fire({
+                    title: 'آیا مطمئن هستید؟',
+                    text: "آیا شما قصد دارید این کاربر را مدیر کنید؟",
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'بله، مطمئنم!',
+                    cancelButtonText: 'خیر'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        fetch(`/Admin/User?handler=Delete`, {
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json',
